--- a/DTShopping/Views/Shared/_Layout.cshtml
+++ b/DTShopping/Views/Shared/_Layout.cshtml
@@ -7,42 +7,42 @@
     <!-- Mobile Specific Metas
        ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" type="text/css" href="ext/jquery/ui/redmond/jquery-ui-1.8.22.css" />
+    <link rel="stylesheet" type="text/css" href="~/ext/jquery/ui/redmond/jquery-ui-1.8.22.css" />
     <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
-    <script type="text/javascript" src="ext/jquery/jquery-1.8.0.min.js"></script>
-    <script type="text/javascript" src="ext/jquery/ui/jquery-ui-1.8.22.min.js"></script>
+    <script type="text/javascript" src="~/ext/jquery/jquery-1.8.0.min.js"></script>
+    <script type="text/javascript" src="~/ext/jquery/ui/jquery-ui-1.8.22.min.js"></script>
     <script type="text/javascript">
 // fix jQuery 1.8.0 and jQuery UI 1.8.22 bug with dialog buttons; http://bugs.jqueryui.com/ticket/8484
 if ( $.attrFn ) { $.attrFn.text = true; }
     </script>
   
     <link rel="stylesheet" type="text/css" href="~/Content/stylesheet.css" />
-    <link rel="stylesheet" type="text/css" href="unishop_theme/unishop_styles/base.css" />
-    <link rel="stylesheet" type="text/css" href="unishop_theme/unishop_styles/skeleton.css" />
-    <link rel="stylesheet" type="text/css" href="unishop_theme/unishop_styles/unishop.css" />
-    <link rel="stylesheet" type="text/css" href="unishop_theme/unishop_styles/sliders_styles.css" />
-    <link rel="stylesheet" type="text/css" href="unishop_theme/unishop_styles/layout.css" />
-    <link rel="stylesheet" type="text/css" href="unishop_theme/unishop_styles/layerslider.css" />
-    <link rel="stylesheet" type="text/css" href="unishop_theme/unishop_styles/effects.css" />
-    <link rel="stylesheet" type="text/css" href="unishop_theme/unishop_styles/light-theme.css" />
-    <link rel="stylesheet" type="text/css" href="unishop_theme/unishop_styles/light-theme.css" />
+    <link rel="stylesheet" type="text/css" href="~/unishop_theme/unishop_styles/base.css" />
+    <link rel="stylesheet" type="text/css" href="~/unishop_theme/unishop_styles/skeleton.css" />
+    <link rel="stylesheet" type="text/css" href="~/unishop_theme/unishop_styles/unishop.css" />
+    <link rel="stylesheet" type="text/css" href="~/unishop_theme/unishop_styles/sliders_styles.css" />
+    <link rel="stylesheet" type="text/css" href="~/unishop_theme/unishop_styles/layout.css" />
+    <link rel="stylesheet" type="text/css" href="~/unishop_theme/unishop_styles/layerslider.css" />
+    <link rel="stylesheet" type="text/css" href="~/unishop_theme/unishop_styles/effects.css" />
+    <link rel="stylesheet" type="text/css" href="~/unishop_theme/unishop_styles/light-theme.css" />
+    <link rel="stylesheet" type="text/css" href="~/unishop_theme/unishop_styles/light-theme.css" />
 
-    <script type="text/javascript" src="unishop_theme/unishop_js/jquery-1.7.2.min.js"></script>
-    <script type="text/javascript" src="unishop_theme/unishop_js/jquery-ui.js"></script>
+    <script type="text/javascript" src="~/unishop_theme/unishop_js/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="~/unishop_theme/unishop_js/jquery-ui.js"></script>
     <script>
         if (false) { document.documentElement.className += 'ie10'; }
     </script>
-<script type="text/javascript" src="unishop_theme/unishop_js/jquery.jcarousel.min.js"></script>
-<script type="text/javascript" src="unishop_theme/unishop_js/jquery.easing.1.3.js"></script>
-<script type="text/javascript" src="unishop_theme/unishop_js/layerslider.kreaturamedia.jquery.js"></script>
- <script type="text/javascript" src="unishop_theme/unishop_js/responsiveslides.js"></script>
-<script type="text/javascript" src="unishop_theme/unishop_js/slider-dark.js"></script>
+<script type="text/javascript" src="~/unishop_theme/unishop_js/jquery.jcarousel.min.js"></script>
+<script type="text/javascript" src="~/unishop_theme/unishop_js/jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="~/unishop_theme/unishop_js/layerslider.kreaturamedia.jquery.js"></script>
+ <script type="text/javascript" src="~/unishop_theme/unishop_js/responsiveslides.js"></script>
+<script type="text/javascript" src="~/unishop_theme/unishop_js/slider-dark.js"></script>
 
-<script type="text/javascript" src="unishop_theme/unishop_js/jquery.elastislide.js"></script>
-<script type="text/javascript" src="unishop_theme/unishop_js/cloud-zoom.1.0.2.js"></script>
-<script type="text/javascript" src="unishop_theme/unishop_js/custom.js"></script>
+<script type="text/javascript" src="~/unishop_theme/unishop_js/jquery.elastislide.js"></script>
+<script type="text/javascript" src="~/unishop_theme/unishop_js/cloud-zoom.1.0.2.js"></script>
+<script type="text/javascript" src="~/unishop_theme/unishop_js/custom.js"></script>
 <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 
 
@@ -54,12 +54,12 @@ if ( $.attrFn ) { $.attrFn.text = true; }
 </head>
 <body>
 <!-- begin bodyWrapper //-->
-<div id="bodyWrapper" class="main_page">
+<div id="bodyWrapper" class="default_page">
   <div id="header">
     <div class="container">
       <div id="logo" class="six columns">
 
-        <div id="storeLogo"> <a class="logo_inner" href="index.php"><img src="images/light/store_logo.png" alt="unishop" title="unishop" width="177" height="46" class="scale-with-grid" /></a></div>
+        <div id="storeLogo"> <a class="logo_inner" href="~/Home/Index"><img src="~/images/light/store_logo.png" alt="unishop" title="unishop" width="177" height="46" class="scale-with-grid" /></a></div>
       </div>
       <div id="header_blocks" class="ten columns">
         <div class="row">
@@ -67,7 +67,7 @@ if ( $.attrFn ) { $.attrFn.text = true; }
             <div class="shopping_cart_b">
               <div class="cart_wrapper">
                 <div class="clearfix">
-                  <p class="img_cart"> <a href="shopping_cart.php"></a> </p>
+                  <p class="img_cart"> <a href="/Home/Cart"></a> </p>
                   <div class="open"> <span> Cart (0)</span> <span class="price">$0.00</span> </div>
                   <a class="cart_link" href="checkout_shipping.php">Checkout</a> </div>
               </div>
@@ -95,12 +95,12 @@ if ( $.attrFn ) { $.attrFn.text = true; }
             </div>
             <div class="nav_block_dropdown">
               <ul class="links">
-                <li class="first"><a href="#">Home</a></li>
+                <li class="first"><a href="/Home/Index">Home</a></li>
                 <li><a href="contact_us.php">Shopping Cart</a></li>
                   <li><a href="contact_us.php">My Account</a></li>
-                <li><a href="shipping.php">DB Login</a></li>
-                <li class=" last"><a href="privacy.php">Claims</a></li>
-                <li class=" last"><a href="privacy.php">Logout</a></li>
+                <li><a href="/Account/Login">DB Login</a></li>
+                <li class="last"><a href="privacy.php">Claims</a></li>
+                <li class="last"><a href="privacy.php">Logout</a></li>
               </ul>
             </div>
           </div>
@@ -127,127 +127,15 @@ if ( $.attrFn ) { $.attrFn.text = true; }
       </div>
     </div>
   </div>
-  <div class="nav-container">
-    <div class="container">
-      <div class="sixteen columns">
-        <div id="menu_block_head">
-          <div class="nav_block_head_field">Select category...</div>
-          <span class="menu_block_head_button"> </span>
-          <div class="clear"></div>
-        </div>
-        <div class="menu_block_dropdown">
-          <div class="et_categ_box">
-            <div id="et_categ_box_scroll">
-              <div class="cat-name"> <a class="main_category" href="index.php?cPath=1"><span class="main_category_border item-1">Book & Stationary</span></a>
-                <div class="drop-box-subcat">
-                  <div class="sub-cat-name"> <a href="index.php?cPath=1_17">Books &amp; Magazines</a>
-                    <div class="drop-box-subsubcat responsive_position">
-                      <div class="subsub-cat-name"> <a href="index.php?cPath=22">Computers &amp; Technology</a></div>
-                      <div class="subsub-cat-name"> <a href="index.php?cPath=23">Dictionaries &amp; Language</a></div>
-                      <div class="subsub-cat-name"> <a href="index.php?cPath=24">General</a></div>
-                    </div>
-                  </div>
-                  <div class="sub-cat-name"> <a href="index.php?cPath=1_4">Coats</a></div>
-                  <div class="sub-cat-name"> <a href="index.php?cPath=1_8">Evening Dresses</a></div>
-                  <div class="sub-cat-name"> <a href="index.php?cPath=1_16">Hoodies</a></div>
-                  <div class="sub-cat-name"> <a href="index.php?cPath=1_9">Prom Dresses</a></div>
-                  <div class="sub-cat-name"> <a href="index.php?cPath=1_5">Shoes</a></div>
-                </div>
-              </div>
-              <div class="cat-name"> <a class="main_category" href="index.php?cPath=2"><span class="main_category_border item-2">Clothing</span></a>
-                <div class="drop-box-subcat">
-                  <div class="sub-cat-name"> <a href="index.php?cPath=2_18">Shoes</a>
-                    <div class="drop-box-subsubcat responsive_position">
-                      <div class="subsub-cat-name"> <a href="index.php?cPath=31">Boat Shoes</a></div>
-                      <div class="subsub-cat-name"> <a href="index.php?cPath=32">Boots</a></div>
-                      <div class="subsub-cat-name"> <a href="index.php?cPath=33">Brogues & Derbies</a></div>
-                      <div class="subsub-cat-name"> <a href="index.php?cPath=34">Chukka Boots</a></div>
-                      <div class="subsub-cat-name"> <a href="index.php?cPath=35">Desert Boots</a></div>
-                      <div class="subsub-cat-name"> <a href="index.php?cPath=36">Formal Shoes</a></div>
-                    </div>
-                  </div>
-                  <div class="sub-cat-name"> <a href="index.php?cPath=2_20">Polo Shirts</a></div>
-                  <div class="sub-cat-name"> <a href="index.php?cPath=2_25">Shirts</a></div>
-                  <div class="sub-cat-name"> <a href="index.php?cPath=2_26">Jeans</a></div>
-                  <div class="sub-cat-name"> <a href="index.php?cPath=2_28">Jumpers</a></div>
-                  <div class="sub-cat-name"> <a href="index.php?cPath=2_27">Jackets</a></div>
-                  <div class="sub-cat-name"> <a href="index.php?cPath=2_29">Hoodies</a></div>
-                  <div class="sub-cat-name"> <a href="index.php?cPath=2_30">Shorts</a></div>
-                </div>
-              </div>
-              <div class="cat-name"> <a class="main_category" href="index.php?cPath=3"><span class="main_category_border item-3">Electronics</span></a>
-                <div class="drop-box-subcat">
-                  <div class="sub-cat-name"> <a href="index.php?cPath=3_37">Cameras</a></div>
-                  <div class="sub-cat-name"> <a href="index.php?cPath=3_38">Cell Phones</a></div>
-                  <div class="sub-cat-name"> <a href="index.php?cPath=3_39">Computers</a></div>
-                </div>
-              </div>
-              <div class="cat-name"> <a class="main_category" href="index.php?cPath=21"><span class="main_category_border item-4">Home &amp; Kitchen</span></a>
-                <div class="drop-box-subcat">
-                  <div class="sub-cat-name"> <a href="index.php?cPath=21_40">Kitchen Appliances</a></div>
-                  <div class="sub-cat-name"> <a href="index.php?cPath=21_41">Home Appliances</a></div>
-                </div>
-              </div>
-              <div class="cat-name"> <a class="main_category" href="index.php?cPath=21"><span class="main_category_border item-4">IT Products</span></a>
-                <div class="drop-box-subcat">
-                  <div class="sub-cat-name"> <a href="index.php?cPath=21_40">Kitchen Appliances</a></div>
-                  <div class="sub-cat-name"> <a href="index.php?cPath=21_41">Home Appliances</a></div>
-                </div>
-              </div>
-              <div class="cat-name"> <a class="main_category" href="index.php?cPath=21"><span class="main_category_border item-4">Lifestyle</span></a>
-                <div class="drop-box-subcat">
-                  <div class="sub-cat-name"> <a href="index.php?cPath=21_40">Kitchen Appliances</a></div>
-                  <div class="sub-cat-name"> <a href="index.php?cPath=21_41">Home Appliances</a></div>
-                </div>
-              </div>
-              <div class="cat-name"> <a class="main_category" href="index.php?cPath=21"><span class="main_category_border item-4">Shoes</span></a>
-                <div class="drop-box-subcat">
-                  <div class="sub-cat-name"> <a href="index.php?cPath=21_40">Kitchen Appliances</a></div>
-                  <div class="sub-cat-name"> <a href="index.php?cPath=21_41">Home Appliances</a></div>
-                </div>
-              </div>
-              <div class="cat-name"> <a class="main_category" href="index.php?cPath=21"><span class="main_category_border item-4">More</span></a>
-                <div class="drop-box-subcat">
-                  <div class="sub-cat-name"> <a href="index.php?cPath=21_40">Kitchen Appliances</a></div>
-                  <div class="sub-cat-name"> <a href="index.php?cPath=21_41">Home Appliances</a></div>
-                </div>
-              </div>
-              <div class="cat-name"> <a class="main_category" href="index.php?cPath=21"><span class="main_category_border item-4">Daily Deals</span></a>
-                <div class="drop-box-subcat">
-                  <div class="sub-cat-name"> <a href="index.php?cPath=21_40">Kitchen Appliances</a></div>
-                  <div class="sub-cat-name"> <a href="index.php?cPath=21_41">Home Appliances</a></div>
-                </div>
-              </div>
-              <div class="cat-name"> <a class="main_category" href="index.php?cPath=21"><span class="main_category_border item-4">Combo Offers</span></a>
-                <div class="drop-box-subcat">
-                  <div class="sub-cat-name"> <a href="index.php?cPath=21_40">Kitchen Appliances</a></div>
-                  <div class="sub-cat-name"> <a href="index.php?cPath=21_41">Home Appliances</a></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
+    <div id="DivCategories">
+      
     </div>
-  </div>
   <div class="et-content-bg">
-    <div class="display_none">
-      <div class="container">
-        <div class="sixteen columns">
-          <div class="breadcrumbs_box"> <a href="http://www.discounttadka.com" class="headerNavigation1">Top</a><span class="headerNavigation">Catalog</span>
-            <div class="clear"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="mainpage-nostyle">
-      <div class="mainpage-nostyle">
+    
           @RenderBody()
         <!-- bodyContent //-->
       </div>
-    </div>
-  </div>
+    
   <!-- dropdown footer block -->
 
   <!-- end dropdown footer block -->
@@ -258,7 +146,7 @@ if ( $.attrFn ) { $.attrFn.text = true; }
       <div class="container">
         <div class="four columns footer-block footer-copyright">
 
-          <div id="copyright"> <a class="logo_footer" href="index.php"><img src="images/light/store_logo.png" alt="unishop" title="unishop" width="177" height="46" class="scale-with-grid" /></a> &copy; 2013 dicounttadka. All Rights Reserved.
+          <div id="copyright"> <a class="logo_footer" href="index.php"><img src="~/images/light/store_logo.png" alt="unishop" title="unishop" width="177" height="46" class="scale-with-grid" /></a> &copy; 2013 dicounttadka. All Rights Reserved.
           </div>
         </div>
         <div class="four columns footer-block footer_information">
@@ -275,7 +163,7 @@ if ( $.attrFn ) { $.attrFn.text = true; }
           <h2>Customer Assistance</h2>
           <nav>
             <ul>
-              <li><a href="contact_us.php">Contact us</a></li>
+              <li><a href="Contact">Contact us</a></li>
               <li><a href="shipping.php">Shipping &amp; Returns</a></li>
               <li><a href="products_new.php">New Products</a></li>
             </ul>
@@ -312,3 +200,16 @@ if ( $.attrFn ) { $.attrFn.text = true; }
     
 </body>
 </html>
+<script>
+    $(document).ready(function () {
+        $.ajax({
+            type: "GET",
+            async: false,
+            url: "/Home/GetCategories",
+            success: function (result) {
+                //alert(result);
+                $("#DivCategories").html(result);
+            }
+        });
+    });
+</script>
